fixed some layout issues

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -10,7 +10,7 @@
     display: inline
 }
 
-@media (max-width: 425px)
+@media (max-width: 590px)
 {
     .MobileNavMenuIcon {
         display: inline
